--- a/index.html
+++ b/index.html
@@ -17,16 +17,16 @@
         </ul>
     </nav>
     <div class="container">
-        <div>
-            <div>This website is awesome</div>
-            <div>
+        <div class="left-part">
+            <div class="hero">This website is awesome</div>
+            <div class="subtext">
                 This website has some subtext that goes 
                 here under the main title. Its a smaller 
                 font and the color is lower contrast
             </div>
             <button>Sign up</button>
         </div>
-        <div>This is a placeholder for an image</div>
+        <div class="placeholder">This is a placeholder for an image</div>
     </div>
 </body>
 </html>
