Finish information part

--- a/index.html
+++ b/index.html
@@ -28,5 +28,26 @@
         </div>
         <div class="placeholder">This is a placeholder for an image</div>
     </div>
+    <div class="information-container">
+        <div class="information-header">Some random information.</div>
+        <div class="content">
+            <div class="small-content">
+                <div class="window"></div>
+                <div>this is some subtext under an illustration or image</div>
+            </div>
+            <div class="small-content">
+                <div class="window"></div>
+                <div>this is some subtext under an illustration or image</div>
+            </div>
+            <div class="small-content">
+                <div class="window"></div>
+                <div>this is some subtext under an illustration or image</div>
+            </div>
+            <div class="small-content">
+                <div class="window"></div>
+                <div>this is some subtext under an illustration or image</div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
