--- a/index.html
+++ b/index.html
@@ -49,5 +49,18 @@
             </div>
         </div>
     </div>
+    <div class="quote-container">
+        <div class="quote-content">
+            <div class="quote-text">
+                This is an inspiring quote, or a testimonial 
+                from a customer. Maybe its just filling up space, 
+                or maybe people will actually read it. Who knows? 
+                All I know is that it looks nice.
+            </div>
+            <div class="quote-author">
+                -Thor, God of Thunder
+            </div>
+        </div>
+    </div>
 </body>
 </html>
