Finish call to action section

--- a/index.html
+++ b/index.html
@@ -62,5 +62,16 @@
             </div>
         </div>
     </div>
+    <div class="cta-container">
+        <div class="cta-content">
+            <div class="cta-texts">
+                <div class="cta-main-text">Call to action! Its time!</div>
+                <div class="cta-subtext">Sign up for our product by clicking 
+                    that butoon right over there!
+                </div>
+            </div>
+            <button class="cta-button">Sign up</button>
+        </div>
+    </div>
 </body>
 </html>
