Finish footer section

--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Landing page</title>
     <link rel="stylesheet" href="./styles.css">
-</head>
-<body>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"><body>
     <nav>
         <div class="logo">Header Logo</div>
         <ul>
@@ -72,6 +71,12 @@
             </div>
             <button class="cta-button">Sign up</button>
         </div>
+    </div>
+    <div class="footer">
+        <a href="https://github.com/michalciberej/landing-page">
+            michalciberej
+            <i class="fa fa-github"></i>
+        </a>
     </div>
 </body>
 </html>
